[package]
name = "xylosip"
version = "0.1.0"
authors = ["Sebastian Lauwers <sl@unticks.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "5", default-features = false, features = ["std"] }
atoi = { version = "0.3.2", default-features = false }
