[package]
name = "xylosip"
version = "0.1.0"
authors = ["Sebastian Lauwers <sl@unticks.com>"]
edition = "2018"
description = "xylosip is a memory-safe RFC3261 SIP parser"
keywords = ["sip", "rfc3261", "parser", "telephony"]
categories = ["parser-implementations", "network-programming", "data-structures"]
license = "MIT"
homepage = "https://github.com/teotwaki/xylosip"

[dependencies]
nom = { version = "5", default-features = false, features = ["std"] }
atoi = { version = "0.3.2", default-features = false }

[badges]
maintenance = { status = "actively-developed" }
